# notepad-plus-plus

./: CMakeLists.txt
PowerEditor/: CMakeLists.txt
PowerEditor/src/: winmain.cpp
PowerEditor/src/ScitillaComponent/: ScintillaEditView.cpp  ScintillaEditView.h
cmake/: boost.cmake  scintilla.cmake  source-group.cmake
