set(srcs
	"src/clipboardFormats.h"
	"src/dpiManager.h"
	"src/EncodingMapper.cpp"
	"src/EncodingMapper.h"
	"src/keys.h"
	"src/lastRecentFileList.cpp"
	"src/lastRecentFileList.h"
	"src/lesDlgs.cpp"
	"src/lesDlgs.h"
	"src/localization.cpp"
	"src/localization.h"
	"src/localizationString.h"
	"src/menuCmdID.h"
	"src/Notepad_plus.cpp"
	"src/Notepad_plus.h"
	"src/Notepad_plus.rc"
	"src/Notepad_plus_Window.cpp"
	"src/Notepad_plus_Window.h"
	"src/NppBigSwitch.cpp"
	"src/NppCommands.cpp"
	"src/NppIO.cpp"
	"src/NppNotification.cpp"
	"src/Parameters.cpp"
	"src/Parameters.h"
	"src/resource.h"
	"src/rgba_icons.h"
	"src/StaticControl.h"
	"src/UniConversion.cpp"
	"src/UniConversion.h"
	"src/Utf8.h"
	"src/Utf8_16.cpp"
	"src/Utf8_16.h"
	"src/winmain.cpp"
	# misc
	"src/MISC/Common/Common.cpp"
	"src/MISC/Common/Common.h"
	"src/MISC/Common/LongRunningOperation.cpp"
	"src/MISC/Common/LongRunningOperation.h"
	"src/MISC/Common/mutex.cpp"
	"src/MISC/Common/mutex.h"
	"src/MISC/Common/mutex.hxx"
	"src/MISC/Common/Sorters.h"
	"src/MISC/crc16/Crc16.h"
	"src/MISC/Exception/MiniDumper.cpp"
	"src/MISC/Exception/MiniDumper.h"
	"src/MISC/Exception/Win32Exception.cpp"
	"src/MISC/Exception/Win32Exception.h"
	"src/MISC/FileNameStringSplitter.h"
	"src/MISC/md5/md5.h"
	"src/MISC/md5/md5Dlgs.cpp"
	"src/MISC/md5/md5Dlgs.h"
	"src/MISC/md5/md5Dlgs_rc.h"
	"src/MISC/PluginsManager/deprecatedSymbols.h"
	"src/MISC/PluginsManager/IDAllocator.cpp"
	"src/MISC/PluginsManager/IDAllocator.h"
	"src/MISC/PluginsManager/Notepad_plus_msgs.h"
	"src/MISC/PluginsManager/PluginInterface.h"
	"src/MISC/PluginsManager/PluginsManager.cpp"
	"src/MISC/PluginsManager/PluginsManager.h"
	"src/MISC/Process/Processus.cpp"
	"src/MISC/Process/Processus.h"
	"src/MISC/RegExt/regExtDlg.cpp"
	"src/MISC/RegExt/regExtDlg.h"
	"src/MISC/RegExt/regExtDlg.rc"
	"src/MISC/RegExt/regExtDlgRc.h"
	# scintilla
	"src/ScitillaComponent/AutoCompletion.cpp"
	"src/ScitillaComponent/AutoCompletion.h"
	"src/ScitillaComponent/Buffer.cpp"
	"src/ScitillaComponent/Buffer.h"
	"src/ScitillaComponent/colors.h"
	"src/ScitillaComponent/columnEditor.cpp"
	"src/ScitillaComponent/columnEditor.h"
	"src/ScitillaComponent/columnEditor.rc"
	"src/ScitillaComponent/columnEditor_rc.h"
	"src/ScitillaComponent/DocTabView.cpp"
	"src/ScitillaComponent/DocTabView.h"
	"src/ScitillaComponent/FindReplaceDlg.cpp"
	"src/ScitillaComponent/FindReplaceDlg.h"
	"src/ScitillaComponent/FindReplaceDlg.rc"
	"src/ScitillaComponent/FindReplaceDlg_rc.h"
	"src/ScitillaComponent/FunctionCallTip.cpp"
	"src/ScitillaComponent/FunctionCallTip.h"
	"src/ScitillaComponent/GoToLineDlg.cpp"
	"src/ScitillaComponent/GoToLineDlg.h"
	"src/ScitillaComponent/Printer.cpp"
	"src/ScitillaComponent/Printer.h"
	"src/ScitillaComponent/ScintillaCtrls.cpp"
	"src/ScitillaComponent/ScintillaCtrls.h"
	"src/ScitillaComponent/ScintillaEditView.cpp"
	"src/ScitillaComponent/ScintillaEditView.h"
	"src/ScitillaComponent/ScintillaRef.h"
	"src/ScitillaComponent/SmartHighlighter.cpp"
	"src/ScitillaComponent/SmartHighlighter.h"
	"src/ScitillaComponent/UserDefineDialog.cpp"
	"src/ScitillaComponent/UserDefineDialog.h"
	"src/ScitillaComponent/UserDefineDialog.rc"
	"src/ScitillaComponent/UserDefineLangReference.h"
	"src/ScitillaComponent/UserDefineResource.h"
	"src/ScitillaComponent/xmlMatchedTagsHighlighter.cpp"
	"src/ScitillaComponent/xmlMatchedTagsHighlighter.h"
	# tinyxml
	"src/TinyXml/tinystr.cpp"
	"src/TinyXml/tinystr.h"
	"src/TinyXml/tinyxml.cpp"
	"src/TinyXml/tinyxml.h"
	"src/TinyXml/tinyXmlA/tinystrA.cpp"
	"src/TinyXml/tinyXmlA/tinystrA.h"
	"src/TinyXml/tinyXmlA/tinyxmlA.cpp"
	"src/TinyXml/tinyXmlA/tinyxmlA.h"
	"src/TinyXml/tinyXmlA/tinyxmlerrorA.cpp"
	"src/TinyXml/tinyXmlA/tinyxmlparserA.cpp"
	"src/TinyXml/tinyxmlerror.cpp"
	"src/TinyXml/tinyxmlparser.cpp"
	# ucharset
	"src/uchardet/CharDistribution.cpp"
	"src/uchardet/CharDistribution.h"
	"src/uchardet/JpCntx.cpp"
	"src/uchardet/JpCntx.h"
	"src/uchardet/LangBulgarianModel.cpp"
	"src/uchardet/LangCyrillicModel.cpp"
	"src/uchardet/LangGreekModel.cpp"
	"src/uchardet/LangHebrewModel.cpp"
	"src/uchardet/LangHungarianModel.cpp"
	"src/uchardet/LangThaiModel.cpp"
	"src/uchardet/nsBig5Prober.cpp"
	"src/uchardet/nsBig5Prober.h"
	"src/uchardet/nsCharSetProber.cpp"
	"src/uchardet/nsCharSetProber.h"
	"src/uchardet/nsCodingStateMachine.h"
	"src/uchardet/nscore.h"
	"src/uchardet/nsEscCharsetProber.cpp"
	"src/uchardet/nsEscCharsetProber.h"
	"src/uchardet/nsEscSM.cpp"
	"src/uchardet/nsEUCJPProber.cpp"
	"src/uchardet/nsEUCJPProber.h"
	"src/uchardet/nsEUCKRProber.cpp"
	"src/uchardet/nsEUCKRProber.h"
	"src/uchardet/nsEUCTWProber.cpp"
	"src/uchardet/nsEUCTWProber.h"
	"src/uchardet/nsGB2312Prober.cpp"
	"src/uchardet/nsGB2312Prober.h"
	"src/uchardet/nsHebrewProber.cpp"
	"src/uchardet/nsHebrewProber.h"
	"src/uchardet/nsLatin1Prober.cpp"
	"src/uchardet/nsLatin1Prober.h"
	"src/uchardet/nsMBCSGroupProber.cpp"
	"src/uchardet/nsMBCSGroupProber.h"
	"src/uchardet/nsMBCSSM.cpp"
	"src/uchardet/nsPkgInt.h"
	"src/uchardet/nsSBCharSetProber.cpp"
	"src/uchardet/nsSBCharSetProber.h"
	"src/uchardet/nsSBCSGroupProber.cpp"
	"src/uchardet/nsSBCSGroupProber.h"
	"src/uchardet/nsSJISProber.cpp"
	"src/uchardet/nsSJISProber.h"
	"src/uchardet/nsUniversalDetector.cpp"
	"src/uchardet/nsUniversalDetector.h"
	"src/uchardet/nsUTF8Prober.cpp"
	"src/uchardet/nsUTF8Prober.h"
	"src/uchardet/prmem.h"
	"src/uchardet/uchardet.cpp"
	"src/uchardet/uchardet.h"
	# wincontrols
	"src/WinControls/AboutDlg/AboutDlg.cpp"
	"src/WinControls/AboutDlg/AboutDlg.h"
	"src/WinControls/AboutDlg/URLCtrl.cpp"
	"src/WinControls/AboutDlg/URLCtrl.h"
	"src/WinControls/AnsiCharPanel/ansiCharPanel.cpp"
	"src/WinControls/AnsiCharPanel/ansiCharPanel.h"
	"src/WinControls/AnsiCharPanel/ansiCharPanel.rc"
	"src/WinControls/AnsiCharPanel/ansiCharPanel_rc.h"
	"src/WinControls/AnsiCharPanel/asciiListView.cpp"
	"src/WinControls/AnsiCharPanel/asciiListView.h"
	"src/WinControls/AnsiCharPanel/ListView.cpp"
	"src/WinControls/AnsiCharPanel/ListView.h"
	"src/WinControls/ClipboardHistory/clipboardHistoryPanel.cpp"
	"src/WinControls/ClipboardHistory/clipboardHistoryPanel.h"
	"src/WinControls/ClipboardHistory/clipboardHistoryPanel.rc"
	"src/WinControls/ClipboardHistory/clipboardHistoryPanel_rc.h"
	"src/WinControls/ColourPicker/ColourPicker.cpp"
	"src/WinControls/ColourPicker/ColourPicker.h"
	"src/WinControls/ColourPicker/ColourPopup.cpp"
	"src/WinControls/ColourPicker/ColourPopup.h"
	"src/WinControls/ColourPicker/ColourPopup.rc"
	"src/WinControls/ColourPicker/ColourPopupResource.h"
	"src/WinControls/ColourPicker/WordStyleDlg.cpp"
	"src/WinControls/ColourPicker/WordStyleDlg.h"
	"src/WinControls/ColourPicker/WordStyleDlg.rc"
	"src/WinControls/ColourPicker/WordStyleDlgRes.h"
	"src/WinControls/ContextMenu/ContextMenu.cpp"
	"src/WinControls/ContextMenu/ContextMenu.h"
	"src/WinControls/DockingWnd/Docking.h"
	"src/WinControls/DockingWnd/DockingCont.cpp"
	"src/WinControls/DockingWnd/DockingCont.h"
	"src/WinControls/DockingWnd/DockingDlgInterface.h"
	"src/WinControls/DockingWnd/DockingGUIWidget.rc"
	"src/WinControls/DockingWnd/DockingManager.cpp"
	"src/WinControls/DockingWnd/DockingManager.h"
	"src/WinControls/DockingWnd/dockingResource.h"
	"src/WinControls/DockingWnd/DockingSplitter.cpp"
	"src/WinControls/DockingWnd/DockingSplitter.h"
	"src/WinControls/DockingWnd/Gripper.cpp"
	"src/WinControls/DockingWnd/Gripper.h"
	"src/WinControls/DocumentMap/documentMap.cpp"
	"src/WinControls/DocumentMap/documentMap.h"
	"src/WinControls/DocumentMap/documentMap.rc"
	"src/WinControls/DocumentMap/documentMap_rc.h"
	"src/WinControls/FileBrowser/fileBrowser.cpp"
	"src/WinControls/FileBrowser/fileBrowser.h"
	"src/WinControls/FileBrowser/fileBrowser.rc"
	"src/WinControls/FileBrowser/fileBrowser_rc.h"
	"src/WinControls/FindCharsInRange/FindCharsInRange.cpp"
	"src/WinControls/FindCharsInRange/FindCharsInRange.h"
	"src/WinControls/FindCharsInRange/findCharsInRange.rc"
	"src/WinControls/FindCharsInRange/findCharsInRange_rc.h"
	"src/WinControls/FunctionList/functionListPanel.cpp"
	"src/WinControls/FunctionList/functionListPanel.h"
	"src/WinControls/FunctionList/functionListPanel.rc"
	"src/WinControls/FunctionList/functionListPanel_rc.h"
	"src/WinControls/FunctionList/functionParser.cpp"
	"src/WinControls/FunctionList/functionParser.h"
	"src/WinControls/Grid/BabyGrid.cpp"
	"src/WinControls/Grid/BabyGrid.h"
	"src/WinControls/Grid/BabyGridWrapper.cpp"
	"src/WinControls/Grid/BabyGridWrapper.h"
	"src/WinControls/Grid/ShortcutMapper.cpp"
	"src/WinControls/Grid/ShortcutMapper.h"
	"src/WinControls/Grid/ShortcutMapper.rc"
	"src/WinControls/Grid/ShortcutMapper_rc.h"
	"src/WinControls/ImageListSet/ImageListSet.cpp"
	"src/WinControls/ImageListSet/ImageListSet.h"
	"src/WinControls/OpenSaveFileDialog/FileDialog.cpp"
	"src/WinControls/OpenSaveFileDialog/FileDialog.h"
	"src/WinControls/PluginsAdmin/pluginsAdmin.cpp"
	"src/WinControls/PluginsAdmin/pluginsAdmin.h"
	"src/WinControls/PluginsAdmin/pluginsAdminRes.h"
	"src/WinControls/Preference/preference.rc"
	"src/WinControls/Preference/preference_rc.h"
	"src/WinControls/Preference/preferenceDlg.cpp"
	"src/WinControls/Preference/preferenceDlg.h"
	"src/WinControls/ProjectPanel/ProjectPanel.cpp"
	"src/WinControls/ProjectPanel/ProjectPanel.h"
	"src/WinControls/ProjectPanel/ProjectPanel.rc"
	"src/WinControls/ProjectPanel/ProjectPanel_rc.h"
	"src/WinControls/ProjectPanel/TreeView.cpp"
	"src/WinControls/ProjectPanel/TreeView.h"
	"src/WinControls/ReadDirectoryChanges/ReadDirectoryChanges.cpp"
	"src/WinControls/ReadDirectoryChanges/ReadDirectoryChanges.h"
	"src/WinControls/ReadDirectoryChanges/ReadDirectoryChangesPrivate.cpp"
	"src/WinControls/ReadDirectoryChanges/ReadDirectoryChangesPrivate.h"
	"src/WinControls/ReadDirectoryChanges/targetver.h"
	"src/WinControls/ReadDirectoryChanges/ThreadSafeQueue.h"
	"src/WinControls/shortcut/RunMacroDlg.cpp"
	"src/WinControls/shortcut/RunMacroDlg.h"
	"src/WinControls/shortcut/RunMacroDlg.rc"
	"src/WinControls/shortcut/RunMacroDlg_rc.h"
	"src/WinControls/shortcut/shortcut.cpp"
	"src/WinControls/shortcut/shortcut.h"
	"src/WinControls/shortcut/shortcut.rc"
	"src/WinControls/shortcut/shortcutRc.h"
	"src/WinControls/SplitterContainer/Splitter.cpp"
	"src/WinControls/SplitterContainer/Splitter.h"
	"src/WinControls/SplitterContainer/SplitterContainer.cpp"
	"src/WinControls/SplitterContainer/SplitterContainer.h"
	"src/WinControls/StaticDialog/RunDlg/RunDlg.cpp"
	"src/WinControls/StaticDialog/RunDlg/RunDlg.h"
	"src/WinControls/StaticDialog/RunDlg/RunDlg.rc"
	"src/WinControls/StaticDialog/RunDlg/RunDlg_rc.h"
	"src/WinControls/StaticDialog/StaticDialog.cpp"
	"src/WinControls/StaticDialog/StaticDialog.h"
	"src/WinControls/StatusBar/StatusBar.cpp"
	"src/WinControls/StatusBar/StatusBar.h"
	"src/WinControls/TabBar/ControlsTab.cpp"
	"src/WinControls/TabBar/ControlsTab.h"
	"src/WinControls/TabBar/TabBar.cpp"
	"src/WinControls/TabBar/TabBar.h"
	"src/WinControls/TaskList/TaskList.cpp"
	"src/WinControls/TaskList/TaskList.h"
	"src/WinControls/TaskList/TaskListDlg.cpp"
	"src/WinControls/TaskList/TaskListDlg.h"
	"src/WinControls/TaskList/TaskListDlg.rc"
	"src/WinControls/TaskList/TaskListDlg_rc.h"
	"src/WinControls/ToolBar/ToolBar.cpp"
	"src/WinControls/ToolBar/ToolBar.h"
	"src/WinControls/ToolTip/ToolTip.cpp"
	"src/WinControls/ToolTip/ToolTip.h"
	"src/WinControls/TrayIcon/trayIconControler.cpp"
	"src/WinControls/TrayIcon/trayIconControler.h"
	"src/WinControls/TreeView/TreeView.cpp"
	"src/WinControls/TreeView/TreeView.h"
	"src/WinControls/VerticalFileSwitcher/VerticalFileSwitcher.cpp"
	"src/WinControls/VerticalFileSwitcher/VerticalFileSwitcher.h"
	"src/WinControls/VerticalFileSwitcher/VerticalFileSwitcher.rc"
	"src/WinControls/VerticalFileSwitcher/VerticalFileSwitcher_rc.h"
	"src/WinControls/VerticalFileSwitcher/VerticalFileSwitcherListView.cpp"
	"src/WinControls/VerticalFileSwitcher/VerticalFileSwitcherListView.h"
	"src/WinControls/Window.h"
	"src/WinControls/WindowInterface.h"
	"src/WinControls/WindowsDlg/SizeableDlg.cpp"
	"src/WinControls/WindowsDlg/SizeableDlg.h"
	"src/WinControls/WindowsDlg/WindowsDlg.cpp"
	"src/WinControls/WindowsDlg/WindowsDlg.h"
	"src/WinControls/WindowsDlg/WindowsDlg.rc"
	"src/WinControls/WindowsDlg/WindowsDlgRc.h"
	"src/WinControls/WindowsDlg/WinMgr.cpp"
	"src/WinControls/WindowsDlg/WinMgr.h"
	"src/WinControls/WindowsDlg/WinRect.cpp"
)

assign_source_group(${srcs})

add_executable(npp WIN32 ${srcs})

set_target_properties(npp PROPERTIES RUNTIME_OUTPUT_NAME "notepad++")

target_compile_definitions(npp PRIVATE
	"_UNICODE"
	"D_WIN32_WINNT=0x0501"
	"_USE_64BIT_TIME_T"
	"TIXML_USE_STL"
	"TIXMLA_USE_STL"
	"UNICODE"
)

target_compile_options(npp PRIVATE
	"/W0" # warnings
	"/MP"
	"/EHa"
)

target_include_directories(npp PUBLIC
	"src"
	"src/MISC"
	"src/MISC/Common"
	"src/MISC/Exception"
	"src/MISC/md5"
	"src/MISC/PluginsManager"
	"src/MISC/Process"
	"src/MISC/RegExt"
	"src/ScitillaComponent"
	"src/TinyXml"
	"src/TinyXml/tinyXmlA"
	"src/uchardet"
	"src/WinControls"
	"src/WinControls/AboutDlg"
	"src/WinControls/AnsiCharPanel"
	"src/WinControls/ClipboardHistory"
	"src/WinControls/ColourPicker"
	"src/WinControls/ContextMenu"
	"src/WinControls/DockingWnd"
	"src/WinControls/DocumentMap"
	"src/WinControls/FileBrowser"
	"src/WinControls/FindCharsInRange"
	"src/WinControls/FunctionList"
	"src/WinControls/Grid"
	"src/WinControls/ImageListSet"
	"src/WinControls/OpenSaveFileDialog"
	"src/WinControls/PluginsAdmin"
	"src/WinControls/Preference"
	"src/WinControls/ProjectPanel"
	"src/WinControls/ReadDirectoryChanges"
	"src/WinControls/shortcut"
	"src/WinControls/SplitterContainer"
	"src/WinControls/StaticDialog"
	"src/WinControls/StaticDialog/RunDlg"
	"src/WinControls/StatusBar"
	"src/WinControls/TabBar"
	"src/WinControls/TaskList"
	"src/WinControls/ToolBar"
	"src/WinControls/ToolTip"
	"src/WinControls/TrayIcon"
	"src/WinControls/TreeView"
	"src/WinControls/VerticalFileSwitcher"
	"src/WinControls/WindowsDlg"
)

target_link_libraries(npp
	Comctl32
	Crypt32
	Dbghelp # ImageNtHeader
	libscintilla
	Version # GetFileVersionInfo
)
